# splint

./: Cargo.toml  README.md  rules.toml  splint.toml
splint/: Cargo.toml  input.rs  rules.json
splint/src/: compiler.rs  lib.rs  main.rs  ty.rs
splint_macro/: Cargo.toml
src/: main.rs  ty.rs
