[package]
name = "lints"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.82"
regex = "1.10.4"
serde = { version = "1.0.202", features = ["derive"] }
syn = "2.0.64"
toml = "0.8.13"
