[package]
edition = "2021"
name = "splint"
version = "1.1.0"
license = "MIT"
description = "Custom Rust Linting"
repository = "https://github.com/tascord/splint"
homepage = "https://github.com/tascord/splint"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="splint"
path="src/main.rs"

[dependencies]
anyhow = "1.0.86"
cargo = "0.79.0"
clap = { version = "4.5.4", features = ["derive"] }
glob = "0.3.1"
itertools = "0.13.0"
miette = {version = "7.2.0", features = ["fancy"]}
owo-colors = "4.0.0"
proc-macro2 = {version = "1.0.83", features = ["span-locations"]}
regex = "1.10.4"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
supports-hyperlinks = "3.0.0"
to_and_fro = "0.5.3"
toml = "0.8.13"
